--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "@mui/styles": "^5.13.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
