--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "simplebar-react": "^3.2.4"
+    "react-redux": "^8.1.1",
+    "simplebar": "^6.2.5",
+    "simplebar-react": "^3.2.1"
   }
 }
