--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "formik": "^2.4.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
+    "react-toastify": "^9.1.3",
     "simplebar": "^6.2.5",
-    "simplebar-react": "^3.2.1"
+    "simplebar-react": "^3.2.1",
+    "yup": "^1.2.0"
   }
 }
